# Intrinsic-Image-Popularity

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  IIAP_Results.txt  Pipfile  README.md  cloudbuild.yaml  firebase.json  reqs.txt  requirements.txt  results.json  test.py
.firebase/: hosting.cHVibGlj.cache
IIPA/: Dockerfile  db.sqlite3  gunicorn.conf.py  index.html  manage.py  nginx.conf  requirements.txt
IIPA/IIPA/: asgi.py  settings.py  urls.py  views.py  wsgi.py
IIPA/imageRater/: admin.py  apps.py  models.py  rateImage.py  urls.py  views.py
IIPA/imageRater/migrations/: 0001_initial.py  0001_squashed_0023_alter_imagerating_rated_img_name_and_more.py  0002_alter_imagerating_image.py  0003_imagerating_rating.py  0004_alter_imagerating_rating.py  0005_alter_imagerating_rating.py  0006_alter_imagerating_rating.py  0007_alter_imagerating_rating.py  0008_alter_imagerating_rating.py  0009_alter_imagerating_rating.py  0010_alter_imagerating_rating.py  0011_createsuperuser.py  0012_imagerating_uuid.py  0013_auto_20231108_1824.py  0014_auto_20231108_1824.py  0017_auto_20231120_0056.py  (+8 more)
dataset/: test.csv  val.csv
django-polls/: manifest.in  pyproject.toml  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django-polls/polls/: README.rst  admin.py  models.py  tests.py  urls.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/static/polls/: styles.css
django-polls/polls/templates/polls/: detail.html  index.html  results.html
public/: index.html
src/: rateImage.py
(+3 files in other folders)
